Fix error in email validation
